--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,10 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     //implementation 'org.springframework.boot:spring-boot-starter-validation'
-    //runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'com.h2database:h2'
     //testImplementation 'org.spring'
     //providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 }
