--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ springdoc.api-docs.path=/api-docs
 
 server.port = 8080
 
-spring.profiles.active=test
+spring.profiles.active=h2db
 spring.jpa.open-in-view=true
